# py-aiger-fast-reader

./: CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
src/: aiger_fast_reader.cpp
tests/: test_aig_reader.py
